# AIWebTesterFramework

./: .env.sample  .gitignore  .replit  Automated-Testing.md  LICENSE.md  README.md  cookies.txt  env.sample  example.md  pyproject.toml  replit.md  run_test.py  setup.sh  test_redaction_system.py  test_watchdog_core.py
attached_assets/: Pasted-AI-WebTester-Integrated-Control-Room-Merge-Pack-This-document-merges-the-Control-Room-scaffold-in-1757583108490_1757583108491.txt  Pasted-Compressing-objects-100-33-33-done-Writing-objects-100-39-39-19-42-KiB-6-47-MiB-s-done-1757601883568_1757601883569.txt  Pasted-I-couldn-t-render-some-file-contents-in-this-environment-GitHub-UI-limitation-here-so-the-items-b-1757598715172_1757598715172.txt  Pasted-Priority-fixes-copy-paste-friendly-1-gitignore-for-evidence-Test-artifacts-never-commit-arti-1757592058036_1757592058036.txt  Pasted-Top-issues-prioritized-P0-blockers-fix-now-Old-divergent-dependency-pins-in-README-The-man-1757589936030_1757589936030.txt  Pasted-error-failed-to-push-some-refs-to-https-github-com-mbelsis-AIWebTesterFramework-workspace-gi-1757601530519_1757601530520.txt  Pasted-ta-compression-using-up-to-8-threads-Compressing-objects-100-25-25-done-Writing-objects-100--1757601432534_1757601432535.txt
browser/: __init__.py  context.py
calendar_app/: TestApp.md
cli/: main.py
configs/: explorer.yaml  security.yaml  security.yaml.backup  watchdog.yaml
data_gen/: __init__.py  faker_util.py
docs/: CI_CD_Pipeline.md  CLAUDE.md  Description.md  Technical_Specs.md  TestReplitApps.md  Use_Against_Your_App.md  hooks.md
evidence/: __init__.py  sink.py
examples/: Calendar_Testing_Guide.md  env.calendar_add_events_test.yaml  env.calendar_login_test.yaml  env.calendar_navigation_test.yaml  env.ecommerce_staging.yaml  env.enterprise_production.yaml  env.generated_ai_webtester_demo_login.yaml  env.grc_tool.yaml  env.local.yaml  env.social_media_staging.yaml  plan.calendar_add_events_test.yaml  plan.calendar_login_test.yaml  plan.calendar_navigation_test.yaml  plan.demo_create_employee.yaml  plan.ecommerce_purchase_flow.yaml  plan.enterprise_dashboard_admin.yaml  plan.generated_ai_webtester_demo_login.yaml  plan.grc_tool_test.yaml  plan.social_media_content_workflow.yaml
mock_app/: __init__.py  app.py
orchestrator/: __init__.py  control_room.py  executor.py  explorer.py  graph.py  (+2 more)
(+36 files in other folders)
