[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-webtester"
version = "0.1.0"
description = "AI-powered web application testing framework with browser automation and real-time monitoring"
authors = [{name = "AI WebTester", email = "contact@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.3.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.5.0",
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0"
]

[project.scripts]
ai-webtester = "cli.main:app"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]